# actix_log_storage

./: .env  .gitignore  Cargo.toml
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: main.rs  settings.rs
src/config/: default.toml
src/entities/: mod.rs  prelude.rs  request.rs
