[package]
name = "actix_log_storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
log = "0.4.17"
serde = {version= "1.0.147", features=["derive"]}
serde_json = "1"
futures = "0.3"
csv-async = {version=  "1.1", features=["tokio", "with_serde"]}
tokio = { version = "1.21.1", features = ["full"] }
sea-orm = { version = "0.10.3", features = [ "sqlx-postgres", "runtime-actix-native-tls", "macros"] }
config = {version = "0.13.2", features = ["toml"] }
chrono = { version = "0.4", features = ["serde"] }
serde_with = {version= "2.1.0", features = ["chrono"]}